finally fixed spacing

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
 
 p {
   color: rgb(85, 85, 85);
+  margin: 0;
 }
 
 /* TRANSITION */
